header in editor now is link to landing

--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -1,11 +1,19 @@
+%heading {
+  color: black;
+}
+
 .heading {
     &_title {
+      @extend %heading;
+
       text-align: center;
       font: 400 70px 'Comfortaa', cursive;
-      margin: 0;
+      margin: 0;      
     }
   
   &_shortdesc {
+    @extend %heading;
+
     text-align: center;
     font: 400 22px 'Anonymous Pro',monospace;
     margin: 0;
