--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,3 +23,73 @@ body {
     color: #333;
   }
 }
+
+// fork me
+#forkongithub a {
+  background:#000;
+  color:#fff;
+  text-decoration:none;
+  font-family: Comfortaa, arial,sans-serif;
+  text-align:center;
+  font-weight:bold;
+  padding:5px 40px;
+  font-size:1rem;
+  line-height:2rem;
+  position:relative;
+  transition:0.5s;
+  
+  &:hover {
+    background:#c11;
+    color:#fff;
+  }
+  
+   
+  
+  %pseudo {
+    content:"";
+    width:100%;
+    display:block;
+    position:absolute;
+    top:1px;
+    left:0;
+    height:1px;
+    background:#fff;
+  }
+  
+  &:before {
+    @extend %pseudo;
+  }
+  
+  &:after {
+    @extend %pseudo;
+    
+    bottom:1px;
+    top:auto;
+  }
+}
+
+@media screen and (min-width:800px){
+  #forkongithub{
+    position:fixed;
+    display:block;
+    top:0;
+    right:0;
+    width:200px;
+    overflow:hidden;
+    height:200px;
+    z-index:9999;
+    
+    a {
+      width:200px;
+      position:absolute;
+      top:50px;
+      right:-75px;
+      -webkit-transform:rotate(45deg);
+      -ms-transform:rotate(45deg);
+      -moz-transform:rotate(45deg);
+      -o-transform:rotate(45deg);
+      transform:rotate(45deg);
+      box-shadow:4px 4px 10px rgba(0,0,0,0.8);
+    }
+  } 
+}
