--- a/app/components/pane-torrent/fields/announce-item/announce.scss
+++ b/app/components/pane-torrent/fields/announce-item/announce.scss
@@ -15,4 +15,30 @@
   
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  
+  &_stat {
+    position: relative;
+    right: 15px;
+  }
+}
+
+@keyframes announce-spinner {
+	0% { 
+	transform: rotate(0turn);
+	}
+
+	100% { 
+	transform: rotate(1turn);
+	}
+}
+
+.announce-spinner {
+  svg {
+    width: 25px;
+    height: 25px;
+    
+    animation: announce-spinner .8s infinite linear;
+    animation-fill-mode: both; 
+  }
 }
