+ support for getting seeders / leechers for each infohash / tracker

--- a/app/components/pane-torrent/fields/announce-item/announce.scss
+++ b/app/components/pane-torrent/fields/announce-item/announce.scss
@@ -38,7 +38,7 @@
     width: 25px;
     height: 25px;
     
-    animation: announce-spinner .8s infinite linear;
+    animation: announce-spinner 1.2s infinite linear;
     animation-fill-mode: both; 
   }
 }
